--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
   <nav>
     <div class="nav-wrapper">
       <img src="./assets/images/LogoMakr_93ofVW (1).png" class="logo">
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <ul id="nav-mobile" class="right">
         <li><a href="https://www.instagram.com/jennibirsan/">Instagram</a></li>
         <li><a href="https://www.linkedin.com/in/jennifer-birsan-4ab9a5113/">LinkedIn</a></li>
         <li><a href="./contact.html">Contact</a></li>
