--- a/contact.html
+++ b/contact.html
@@ -16,10 +16,12 @@
         <nav>
                 <div class="nav-wrapper">
                   <img src="./assets/images/LogoMakr_93ofVW (1).png" class="logo">
-                  <ul id="nav-mobile" class="right hide-on-med-and-down">
+                  <ul id="nav-mobile" class="right">
                       <li><a href="https://www.instagram.com/jennibirsan/">Instagram</a></li>
                       <li><a href="https://www.linkedin.com/in/jennifer-birsan-4ab9a5113/">LinkedIn</a></li>
+                      <li><a href="./about.html">About JB</a></li>
                       <li><a href="./index.html">Home</a></li>
+
                     </ul>
                 </div>
               </nav>
