--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
                 <div class="nav-wrapper">
                   <img src="./assets/images/LogoMakr_93ofVW (1).png" class="logo">
-                  <ul id="nav-mobile" class="right hide-on-med-and-down">
+                  <ul id="nav-mobile" class="right">
                     <li><a href="https://www.instagram.com/jennibirsan/">Instagram</a></li>
                     <li><a href="https://www.linkedin.com/in/jennifer-birsan-4ab9a5113/">LinkedIn</a></li>
                     <li><a href="./contact.html">Contact</a></li>
@@ -23,7 +23,7 @@
               </nav>
               <div class="container">
                   <div class="row">
-                      <div class="col s12 m6">
+                      <div class="">
                         <div class="card">
                           <div class="card-image">
                             <img src="./assets/images/LogoMakr_93ofVW (1).png">
