--- a/about.html
+++ b/about.html
@@ -44,8 +44,7 @@
           <p>Her work was all focused one aspect: people. Whether through teaching, giving back to the community, or
             throwing lavish events for entertainment, she excels in all environments.</p>
 
-          <p>Now, she is ready for a new challenge. Her most recent project and role was heavily involved in consulting,
-            strategic operations, and content management. She is eager to learn all the ins and outs of web development
+          <p>Now, she is ready for a new challenge. She is eager to learn all the ins and outs of web development
             and wants to expand her skill set constantly. Some of her top projects include <a
               href="https://yzhouyzhou.github.io/team6-project1/">What's Up, Chicago?</a>, <a
               href="https://jennibirsan.github.io/Train-Activity/">Train Timer</a>, and <a
