--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
           <p>Throughout her career and undergrad years, she was also contract hired to work for the Illinois Restaurant
             Association in the Chicago Gourmet department, where she helped coordinate Chicago's only premier food and
             wine festival in 2016 and 2017. She currently is working as a content manager and is the liasion between an
-            author here in Chicago and a well-known ghostwriter in New York City.</p>
+            author here in Chicago and a ghostwriter in New York City.</p>
 
           <p>Her work was all focused one aspect: people. Whether through teaching, giving back to the community, or
             throwing lavish events for entertainment, she excels in all environments.</p>
