--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                             <br>
                           Professional meme finder.</p>
                           <br>
+                          Master of the eyebrow game.
+                          <br>
                           <a href="./about.html">Check me out.</a>
 
                           </div>
