--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
       <img src="./assets/images/LogoMakr_93ofVW (1).png" class="logo">
       <ul id="nav-mobile" class="right">
         <li><a href="https://www.instagram.com/jennibirsan/">Instagram</a></li>
+        <li><a href="https://github.com/jennibirsan">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/jennifer-birsan-4ab9a5113/">LinkedIn</a></li>
         <li><a href="./contact.html">Contact</a></li>
         <li><a href="./index.html">Home</a></li>
@@ -47,8 +48,8 @@
           <p>Now, she is ready for a new challenge. She is eager to learn all the ins and outs of web development
             and wants to expand her skill set constantly. Some of her top projects include <a
               href="https://yzhouyzhou.github.io/team6-project1/">What's Up, Chicago?</a>, <a
-              href="https://jennibirsan.github.io/Train-Activity/">Train Timer</a>, and <a
-              href="https://jennibirsan.github.io/unit-4-game/">TMNT Guessing Game</a>. However, she still dreams of
+              href="https://jenni-friendfinder-live1.herokuapp.com/">Friend Finder</a>, and <a
+              href="https://github.com/jennibirsan/liri-node-app">Liri Bot App</a>. However, she still dreams of
             becoming a rapper. One day. You will see. Jenni is also a big fan of Tupac and believes he is still alive.
           </p>
         </div>
