--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
                   <ul id="nav-mobile" class="right">
                       <li><a href="https://www.instagram.com/jennibirsan/">Instagram</a></li>
                       <li><a href="https://www.linkedin.com/in/jennifer-birsan-4ab9a5113/">LinkedIn</a></li>
-                      <li><a href="./about.html">About JB</a></li>
+                      <li><a href="https://github.com/jennibirsan">GitHub</a></li>
                       <li><a href="./index.html">Home</a></li>
 
                     </ul>
