--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                   <ul id="nav-mobile" class="right">
                     <li><a href="https://www.instagram.com/jennibirsan/">Instagram</a></li>
                     <li><a href="https://www.linkedin.com/in/jennifer-birsan-4ab9a5113/">LinkedIn</a></li>
+                    <li><a href="https://github.com/jennibirsan">GitHub</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                   </ul>
                 </div>
@@ -46,6 +47,30 @@
                            
               </div>
 
+
+              <footer class="page-footer">
+                <div class="container">
+                  <div class="row">
+                   
+                <div class="col l4 offset-l2 s12"> 
+                      <h5 class="white-text">Links</h5>
+                      <!-- <ul>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                      </ul>  -->
+                    </div>
+                  </div>
+                </div>
+                <div class="footer-copyright">
+                  <div class="container">
+                  © 2019 Copyright Text
+                  <a class="grey-text text-lighten-4 right" href="#!">jenni.birsan@gmail.com</a>
+                  </div>
+                </div>
+              </footer>
+             <footer>
 
       <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
