--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,7 @@
                   <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="./about.html">About Me</a></li>
                     <li><a href="./portfolio.html">Portfolio</a></li>
+                    <li><a href="https://github.com/jennibirsan">GitHub</a></li>
                     <li><a href="./contact.html">Contact Me</a></li>
                   </ul>
                 </div>
