--- a/about.html
+++ b/about.html
@@ -48,8 +48,10 @@
           <p>Now, she is ready for a new challenge. She is eager to learn all the ins and outs of web development
             and wants to expand her skill set constantly. Some of her top projects include <a
               href="https://yzhouyzhou.github.io/team6-project1/">What's Up, Chicago?</a>, <a
-              href="https://jenni-friendfinder-live1.herokuapp.com/">Friend Finder</a>, and <a
-              href="https://github.com/jennibirsan/liri-node-app">Liri Bot App</a>. However, she still dreams of
+              href="https://jenni-friendfinder-live1.herokuapp.com/">Friend Finder</a>, <a
+              href="https://github.com/jennibirsan/liri-node-app">Liri Bot App</a>, <a
+              href="https://jb-mongo-article-scraper-live.herokuapp.com/">Mongo Article Scraper</a>, and <a
+              href="https://jennibirsan.github.io/clickygame-deploy/">Friends Clicky Game</a>. However, she still dreams of
             becoming a rapper. One day. You will see. Jenni is also a big fan of Tupac and believes he is still alive.
           </p>
         </div>
